# agentic-memory-mcp-server

./: .gitignore  README.md  app.yaml  pyproject.toml
migrations/: prune_memories.sql
server/: app.py  db.py  main.py  tools.py  utils.py
static/: index.html
